feat: add mobile notification read state
